<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    >

        <Button
            android:id="@+id/manage_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25px"
            android:layout_gravity="right"
            android:text="@string/manage_question" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:textSize="80px"
                android:textStyle="bold"
                 />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="100dp">

                <Button
                    android:id="@+id/true_button"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"

                    android:text="@string/true_button" />

                <Button
                    android:id="@+id/false_button"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="@string/false_button" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
>

                <Button
                    android:id="@+id/next_button"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/next_button" />
            </LinearLayout>

        </LinearLayout>

</LinearLayout>